# sentinel-health

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/hooks/: prompt-context.py
.github/workflows/: cd-deploy.yml  cd-images.yml  ci-backend.yml  ci-consumer.yml  ci-frontend.yml  ci-infra.yml  ci-sidecar.yml  ci-worker.yml
approval-worker/: .env.example  Dockerfile  pyproject.toml
approval-worker/src/: config.py  main.py  models.py
approval-worker/src/middleware/: rate_limit.py
approval-worker/src/services/: firestore.py  pubsub.py
approval-worker/tests/: conftest.py  test_worker.py
audit-consumer/: Dockerfile  pyproject.toml
audit-consumer/src/: config.py  main.py  models.py  transform.py
audit-consumer/src/services/: bigquery.py
audit-consumer/tests/: conftest.py  test_consumer.py
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_extensions.py  002_clinical_protocols.py  003_encounter_audit.py  004_triage_approvals.py  005_seed_protocols.py  006_alter_embedding_dimension.py
backend/scripts/: embed_protocols.py  generate_embeddings.py
backend/sql/: 002_clinical_protocols.sql  003_encounter_audit.sql  004_triage_approvals.sql  005_seed_protocols.sql  006_alter_embedding_dimension.sql
backend/src/: config.py  logging_config.py  main.py  models.py
backend/src/api/: health.py  stream.py  triage.py
backend/src/audit/: writer.py
backend/src/graph/: pipeline.py  state.py
backend/src/graph/nodes/: extractor.py  rag_retriever.py  reasoner.py  sentinel.py
backend/src/middleware/: auth.py  error_handler.py  rate_limit.py
backend/src/routing/: classifier.py  router.py
backend/src/services/: anthropic_client.py  embedding_service.py  firestore.py  metrics.py  protocol_store.py  pubsub.py  sidecar_client.py
backend/tests/: conftest.py
backend/tests/test_api/: conftest.py  test_health.py  test_triage.py
backend/tests/test_audit/: test_writer.py
backend/tests/test_graph/: test_pipeline.py  test_rag.py
backend/tests/test_integration/: conftest.py  test_approval_workflow.py
backend/tests/test_routing/: test_router.py
backend/tests/test_services/: test_embedding_service.py
certs/: .gitignore  generate-dev-certs.sh
docs/: sentinel-health-discovery.md
docs/runbooks/: dlq-investigation.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/__tests__/: EncounterForm.test.tsx  format.test.ts
load-tests/: locustfile.py  pyproject.toml
sidecar/: .dockerignore  .env.example  Dockerfile  pyproject.toml
sidecar/rust/: Cargo.toml
sidecar/rust/src/: lib.rs
sidecar/schemas/: extractor_output.json  reasoner_output.json  sentinel_output.json
sidecar/src/: config.py  main.py  models.py
sidecar/src/validators/: fhir_validator.py  phi_stripper.py  pii_scanner.py  token_guard.py
sidecar/tests/: conftest.py  test_validators.py
(+85 files in other folders)
