[project]
name = "sentinel-health-backend"
version = "0.1.0"
description = "Sentinel-Health Orchestrator — clinical triage pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.2.0",
    "anthropic>=0.42.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-pubsub>=2.27.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-secret-manager>=2.21.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "sse-starlette>=2.1.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "voyageai>=0.3.0",
    "google-cloud-aiplatform>=1.71.0",
    "python-json-logger>=3.0.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
