[project]
name = "sentinel-health-sidecar"
version = "0.1.0"
description = "Sentinel-Health Validator Sidecar — PII detection, FHIR validation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jsonschema>=4.23.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "maturin>=1.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
